overflow fixed:

--- a/app/assets/stylesheets/login.scss
+++ b/app/assets/stylesheets/login.scss
@@ -1,13 +1,4 @@
 
-
-html, body {
-  height: 100%;
-  width: 100%;
-  overflow: hidden;
-}
-
-
-
 .login {
   max-width: 280px;
   min-height: 300px;
